--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amorio de Verano</title>
-    <center><form action="/bach/html/formulario.html">
+    <center><form action="https://fagm4.github.io/formulario/">
         <input type="text" placeholder="Pongale un texto pe wn" required>
         <button type="submit">Enviar</button>
     </form></center>
